--- a/css/header.css
+++ b/css/header.css
@@ -95,12 +95,12 @@ header .header-outlined img {
   border-bottom-left-radius: 8px;
   background-color: #ffffff;
   border: 1px solid #c8c8c8;
-  width: 50%;
-  height: 100vh;
+  width: 30%;
+  height: 100%;
   right: 0;
   top: 0;
   padding: 36px 60px;
-  gap: 12px;
+  gap: 24px;
   z-index: 1000;
   animation: mobileNavigationAnimation 0.2s ease-in-out;
 }
@@ -119,7 +119,7 @@ header .header-outlined img {
 .Header-MobileNavigation ul {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 24px;
 }
 
 .Header-MobileNavigation img:nth-child(1) {
@@ -154,10 +154,10 @@ header .header-outlined img {
     transition: all 0.3s ease;
   }
 
-  .navigation div:nth-child(2) {
+  /* .navigation div:nth-child(2) {
     gap: 10px;
     transition: all 0.3s ease;
-  }
+  } */
 
   .navigation div:nth-child(2) ul {
     gap: 10px;
@@ -166,24 +166,23 @@ header .header-outlined img {
 }
 
 @media screen and (max-width: 768px) {
-}
-
-@media screen and (max-width: 480px) {
   header .header-outlined {
     display: block;
     gap: 20px;
     z-index: 1000;
     transition: all 0.3s ease;
   }
+  header .navigation {
+    display: none;
+    transition: all 0.3s ease;
+  }
+}
 
+@media screen and (max-width: 480px) {
   header div:nth-child(2) {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: all 0.3s ease;
-  }
-  header .navigation {
-    display: none;
     transition: all 0.3s ease;
   }
 
