--- a/css/highlight.css
+++ b/css/highlight.css
@@ -36,7 +36,7 @@
     transition: all 0.3s ease;
   }
   .highlight-content .highlight-content-container {
-    padding: 20px 8px;
+    padding: 20px;
     gap: 8px;
     transition: all 0.3s ease;
   }
